--- a/web/.env
+++ b/web/.env
@@ -17,3 +17,15 @@
 APP_ENV=dev
 APP_SECRET=635b8b3fc258459fd23a9e8088f60999
 ###< symfony/framework-bundle ###
+
+
+
+
+###> doctrine/doctrine-bundle ###
+# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
+#
+# DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
+# DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7&charset=utf8mb4"
+DATABASE_URL="mysql://bigbuy:8O_HRYu5HBqlqtLj@192.168.1.129:3306/bigbuy?serverVersion=5.7&charset=UTF8MB4"
+###< doctrine/doctrine-bundle ###
